fix: Align items to center of body element

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ body {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
+    align-items: center;
 }
 
 section:has(form), form {
